overlays/app_self_ssl_nginx/httpbin-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-httpbin
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - 52.154.242.32
    secretName: httpbin-tls
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: httpbin
          servicePort: 8000
